feat: add `discover_files()`
`discover_files()` searches the given *root* for any .md files and returns Vec<String>, each entry for file-path relative to the given *root*

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ keywords = ["markdown", "kms", "knowledge", "management", "parser"]
 categories = ["command-line-utilities"]
 
 [dependencies]
+glob = "0.3.1"
 regex = "1.9.1"
