--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pandora-kms"
-version = "0.1.2-alpha.1"
+version = "0.2.0"
 edition = "2021"
 description = "personal knowledge management system"
 authors = ["Birnadin Erick"]
